--- a/index.html
+++ b/index.html
@@ -11,34 +11,34 @@
         <div id="title-box">
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
-
+          <h4>PHARRELL WILLIAMS</h4>
           <!-- Level 2 'HAPPY' Header -->
-
+          <h2>HAPPY</h2>
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
-
+          <H4>| FROM DESPICABLE ME 2 |</H4>
         </div>
       </div>
 
       <div id="back" class="album">
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
-
+        <H3>| FROM DESPICABLE ME 2 |</H3>
         <!-- Level 1 'HAPPY' Header -->
-
+        <H1>HAPPY</H1>
         <!-- Level 3 'WRITTEN BY...' Header -->
-
+        <H3>WRITTEN BY PHARRELL WILLIAMS</H3>
         <!-- pararaph text 'PUBLISHED BY...' -->
-
+        <P>PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) </P>
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
-
+          <SPAN>PHARRELLWILLIAMS.COM</SPAN>
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-
+          <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png">
         <!-- span text 'COLUMBIARECORDS.COM' -->
-
+          <span>COLUMBIARECORDS.COM</span>
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-
+          <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png">
       </div>
     </div>
   </body>
